@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.1"
-#define public MagickPackageVersionAddendum "-20031217"
+#define public MagickPackageVersionAddendum "-20031225"
 #define public MagickPackageReleaseDate "unreleased"
