@@ -53,6 +53,16 @@
 </tr>
 </table>
 <p>
+2003-12-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> configure.ac: &lt;ft2build.h&gt; is an optional prerequisite for
+        &lt;freetype/freetype.h&gt; and &lt;libwmf/ipa.h&gt; so include it when
+        testing for these headers.<BR>
+  <LI> magick/annotate.c: Include &lt;ft2build.h&gt; if it is available.
+
+</UL>
+<p>
 2003-12-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
